Updated parser. Removed Option "=" for equals. Including "_" in the names of Nodes.